updating the layout using bootstrap gridsystem.

--- a/index.html
+++ b/index.html
@@ -16,71 +16,72 @@
 </head>
 <body>
 <!-- header -->
-<header class="navbar navbar-static-top pf-header">
-    <div class="container">
-        <div class="row pf-header-row">
-            <div class="navbar-header pf-logo-wrap">
-                <a href="#" class="navbar-brand">
-                    <img class="pf-logo" src="img/logo.png" alt="logo"/>
-                </a>
-            </div>
-            <div class="pf-profile-info">
-                <h1 class="pf-profile-owner-name">Sulekha Mahato</h1>
-                <span class="pf-profile-owner-title">Frontend Developer</span>
-            </div>
+<header class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <nav class="navbar navbar-default pf-header-nav">
+                <div class="navbar-header hidden-xs">
+                    <a href="#" class="navbar-brand pf-logo">
+                        <img src="img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="pf-profile-info">
+                    <h1 class="pf-profile-owner-name">Sulekha Mahato</h1>
+                    <span class="pf-profile-owner-title">Frontend Developer</span>
+                </div>
+            </nav>
         </div>
     </div>
 </header>
 <!-- ./header -->
 
-<!-- content -->
-<main class="pf-page-content">
-    <!-- main jumbotron banner work -->
-    <section id="pf-content-jumbotron" class="container">
-        <div class="jumbotron">
-            <img class="img-responsive" src="img/main-bg.png" alt="main">
-        </div>
-    </section>
-    <!-- ./main jumbotron banner work -->
-    <!-- featured work -->
-    <section id="pf-content-featured-work" class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h3 class="pf-featured-work-title">Featured Work</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="thumbnail pf-featured-work">
-                    <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
-                    <div class="caption">
-                        <h4 class="pf-fw-project-title">Project Work #3</h4>
-                        <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
-                    </div>
+<!-- contents -->
+<div class="container-fluid">
+    <div class="row">
+        <!-- jumbotron -->
+        <div class="col-md-12">
+            <section id="pf-content-jumbotron">
+                <div class="jumbotron">
+                    <img class="img-responsive" src="img/main-bg.png" alt="main">
                 </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="thumbnail pf-featured-work">
-                    <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
-                    <div class="caption">
-                        <h4 class="pf-fw-project-title">Project Work #2</h4>
-                        <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="thumbnail pf-featured-work">
-                    <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
-                    <div class="caption">
-                        <h4 class="pf-fw-project-title">Project Work #3</h4>
-                        <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
-                    </div>
+            </section>
+        </div>
+        <!-- ./jumbotron -->
+    </div>
+    <div class="row">
+        <!-- featured work -->
+        <div class="col-md-12">
+            <h3 class="pf-featured-work-title">Featured Work</h3>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail pf-featured-work">
+                <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
+                <div class="caption">
+                    <h4 class="pf-fw-project-title">Project Work #3</h4>
+                    <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ./featured work -->
-</main>
-<!-- ./content -->
+        <div class="col-md-4">
+            <div class="thumbnail pf-featured-work">
+                <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
+                <div class="caption">
+                    <h4 class="pf-fw-project-title">Project Work #2</h4>
+                    <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail pf-featured-work">
+                <img class="img-responsive" src="img/featured-work-bg.png" alt="featured work">
+                <div class="caption">
+                    <h4 class="pf-fw-project-title">Project Work #3</h4>
+                    <a href="#" class="pf-fw-project-link">http://www.github.com/sulekhamahato/udacityproject</a>
+                </div>
+            </div>
+        </div>
+        <!-- ./featured work -->
+    </div>
+</div>
 </body>
 </html>
