--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-xs-12">
             <nav class="navbar navbar-default pf-header-nav">
-                <div class="navbar-header hidden-xs">
+                <div class="navbar-header">
                     <a href="#" class="navbar-brand pf-logo">
                         <img src="img/logo.png" alt="logo">
                     </a>
